--- a/ppeokkeum/public/index.html
+++ b/ppeokkeum/public/index.html
@@ -29,6 +29,9 @@
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_JAVASCRIPT_KEY%&libraries=services,clusterer"
         ></script>
+
+        <!-- source of favicon.ico
+        <a href="https://www.flaticon.com/kr/free-icons/" title="시가 아이콘">시가 아이콘  제작자: Good Ware - Flaticon</a> -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
