--- a/ppeokkeum/public/index.html
+++ b/ppeokkeum/public/index.html
@@ -31,7 +31,10 @@
         ></script>
 
         <!-- source of favicon.ico
-        <a href="https://www.flaticon.com/kr/free-icons/" title="시가 아이콘">시가 아이콘  제작자: Good Ware - Flaticon</a> -->
+        <a href="https://www.flaticon.com/kr/free-icons/" title="담배 아이콘">담배 아이콘  제작자: Freepik - Flaticon</a> -->
+
+        <!-- source of maker image on map
+        https://www.flaticon.com/kr/free-icon/cigarette_705085?term=%EB%8B%B4%EB%B0%B0&page=1&position=20&origin=search&related_id=705085 -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
